Fixes on mobile version of Eshop page

--- a/src/components/ProductModal/index.scss
+++ b/src/components/ProductModal/index.scss
@@ -20,8 +20,8 @@
       position: absolute;
       top: 10px;
       right: 10px;
-      height: 8%;
-      width: 8%;
+      height: 50px;
+      width: 50px;
 
       &:hover {
         cursor: pointer;
@@ -52,14 +52,14 @@
 
         .button {
           flex: 1;
+          display: flex;
+          justify-content: center;
+          align-items: center;
 
           a {
-            display: flex;
-            justify-content: center;
-            align-items: center;
-
             img {
-              width: 75%;
+              width: 14vw;
+              height: auto;
             }
           }
         }
@@ -86,6 +86,74 @@
           p {
             font-size: 1.5vw;
           }
+        }
+      }
+    }
+  }
+}
+
+.modal-container-mobile {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 50px;
+  z-index: 1000;
+  background-color: black;
+  color: white;
+
+  .xmark {
+    position: absolute;
+    top: 5px;
+    right: 5px;
+    width: 50px;
+    height: 50px;
+
+    &:hover {
+      cursor: pointer;
+    }
+  }
+
+  .modal-content {
+    margin: 60px 20px;
+    position: relative;
+
+    img {
+      height: 450px;
+      width: 100%;
+      object-fit: cover;
+    }
+
+    .title-price {
+      margin-top: 20px;
+      margin-bottom: 20px;
+      display: flex;
+      justify-content: space-between;
+
+      p {
+        font-size: 25px;
+      }
+
+      .price {
+        white-space: nowrap;
+      }
+    }
+
+    .description-button {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+
+      p {
+        font-size: 12px;
+      }
+
+      a {
+        width: 100%;
+
+        img {
+          width: 140px;
+          height: auto;
         }
       }
     }
